force-app/main/default/objects/CCX_Product__c/CCX_Product__c.object-meta.xml
<CustomObject>
    <label>CCX_Product</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Pid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX_products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>