force-app/main/default/objects/CCX_Product__c/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <label>ABC Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Category</fullName>
            </value>
            <value>
                <fullName>B Category</fullName>
            </value>
            <value>
                <fullName>C category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>