force-app/main/default/objects/CCX_Product__c/fields/CCX_Category__c.field-meta.xml
<CustomField>
    <fullName>CCX_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX_Category</label>
    <referenceTo>CCX__c</referenceTo>
    <relationshipLabel>CCX_products</relationshipLabel>
    <relationshipName>CCX_products</relationshipName>
    <type>Lookup</type>
</CustomField>