force-app/main/default/objects/CCX_Product__c/fields/CCX_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>CCX_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX_Purchase Order</label>
    <referenceTo>CCX_PurchaseOrder__c</referenceTo>
    <relationshipLabel>CCX_products</relationshipLabel>
    <relationshipName>CCX_products</relationshipName>
    <type>Lookup</type>
</CustomField>