force-app/main/default/objects/CCX_Product__c/fields/CurrentQuantity__c.field-meta.xml
<CustomField>
    <fullName>CurrentQuantity__c</fullName>
    <label>CurrentQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>