force-app/main/default/objects/CCX_Product__c/fields/IsPerishable__c.field-meta.xml
<CustomField>
    <fullName>IsPerishable__c</fullName>
    <label>IsPerishable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>