force-app/main/default/objects/CCX_Product__c/fields/MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaxQuantity__c</fullName>
    <label>MaxQty</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>