force-app/main/default/objects/CCX_Product__c/fields/MinQty__c.field-meta.xml
<CustomField>
    <fullName>MinQty__c</fullName>
    <formula>IF( ISPICKVAL( IsPerishable__c ,&quot;yes&quot;),10,50 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MinQty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>