force-app/main/default/objects/CCX_Product__c/fields/Product_Dresciption__c.field-meta.xml
<CustomField>
    <fullName>Product_Dresciption__c</fullName>
    <label>Product Dresciption</label>
    <type>TextArea</type>
</CustomField>