force-app/main/default/objects/CCX_Product__c/fields/ReOrderLevel__c.field-meta.xml
<CustomField>
    <fullName>ReOrderLevel__c</fullName>
    <label>ReOrderLevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>