force-app/main/default/objects/CCX_Product__c/fields/ReorderQty__c.field-meta.xml
<CustomField>
    <fullName>ReorderQty__c</fullName>
    <formula>IF( ISPICKVAL( IsPerishable__c ,&quot;Yes&quot;),3* MinQty__c ,2* MinQty__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReorderQty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>