force-app/main/default/objects/CCX_Product__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Lt</fullName>
            </value>
            <value>
                <fullName>Gm</fullName>
            </value>
            <value>
                <fullName>Ml</fullName>
            </value>
            <value>
                <fullName>Mts</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>