force-app/main/default/objects/CCX_Product__c/validationRules/Product_Max_Quantity_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Max_Quantity_rule</fullName>
    <active>true</active>
    <errorConditionFormula>CurrentQuantity__c &gt; MaxQuantity__c</errorConditionFormula>
    <errorDisplayField>CurrentQuantity__c</errorDisplayField>
    <errorMessage>Current Quantity should not exceed max quantity</errorMessage>
</ValidationRule>