force-app/main/default/objects/CCX_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Product_Name__c</columns>
    <columns>MaxQuantity__c</columns>
    <columns>MinQty__c</columns>
    <columns>ReOrderLevel__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>